# CISS-VAE-python

./: .gitignore  .readthedocs.yml  LICENSE  README.html  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-rtd.yml  pypi.yml  test-pypi.yml  tests.yml  upload-and-test.yml
VOID_vignettes/: _brand.yml  missingness_prop_vignette.md  quickstart.md  vignette.html  vignette.md  vignette.qmd
docs/: requirements.txt
docs/source/: api.rst  binary_vignette.ipynb  conf.py  dni_vignette.ipynb  index.rst  missingness_prop_vignette.ipynb  missingness_prop_vignette.md  model_explanation.ipynb  optunadb.sqlite3  quickstart.ipynb  saved_ss.json  test_dni_python.sqlite3  test_imp_python.sqlite3  vignette.ipynb  vignette.md
docs/source/_autosummary/: ciss_vae.classes.cluster_dataset.ClusterDataset.rst  ciss_vae.classes.vae.CISSVAE.rst  ciss_vae.training.autotune.SearchSpace.rst  ciss_vae.training.run_cissvae.run_cissvae.rst  ciss_vae.training.train_refit.impute_and_refit_loop.rst  ciss_vae.utils.clustering.cluster_on_missing.rst  ciss_vae.utils.clustering.cluster_on_missing_prop.rst  ciss_vae.utils.helpers.get_imputed.rst  ciss_vae.utils.helpers.get_imputed_df.rst  ciss_vae.utils.helpers.plot_vae_architecture.rst  ciss_vae.utils.matrix.create_missingness_prop_matrix.rst  ciss_vae.utils.run_cissvae.cluster_on_missing.rst  ciss_vae.utils.run_cissvae.run_cissvae.rst
src/ciss_vae/: __init__.py  vignette.qmd
src/ciss_vae/classes/: cluster_dataset.py  vae.py
src/ciss_vae/data/: __init__.py  clusters.csv  df_complete.csv  df_missing.csv  dni.csv
src/ciss_vae/training/: __init__.py  autotune.py  run_cissvae.py  train_initial.py  train_refit.py
src/ciss_vae/utils/: __init__.py  clustering.py  datasim.py  helpers.py  loss.py  matrix.py  missing_prop_matrix.py  run_cissvae.py
tests/: conftest.py  test_autotune.py  test_categorical_valdata.py  test_core.py  test_correct_mse.py  test_dni.py  test_ignore_bce.py
vignettes/: vignette.qmd
vignettes/vignette_files/libs/bootstrap/: bootstrap.min.css
