[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CISS-VAE"
version = "0.1.7"
description = "Clustering-Informed Shared-Structure Variational Autoencoder (CISS-VAE) for Missing Data Imputation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
{ name = "Danielle Vaithilingam", email = "vaithid1@mskcc.org" },
{ name = "Yasin Khadem Charvadeh", email = "khademy@mskcc.org" }
 
]
dependencies = [
  "numpy>=1.22",
  "pandas>=2.0",
  "torch>=2.0",
  "optuna>=4.3",
  "tqdm>=4.67",
  "matplotlib",
  "scikit-learn"
]

[project.optional-dependencies]
clustering = [
    "hdbscan"
]
dev = ["pytest", "black", "mypy"]
docs = ["sphinx", "sphinx_rtd_theme", "myst-parser"]

[project.urls]
Homepage = "https://ciss-vae.readthedocs.io/en/latest/index.html"
Documentation = "https://ciss-vae.readthedocs.io/en/latest/vignette.html"
Source = "https://github.com/CISS-VAE/CISS-VAE-python"


[tool.black]
line-length = 88
target-version = ["py38"]

[tool.setuptools.packages.find]
where = ["./src"]
include = ["ciss_vae*"]

